<package>
	<name>droneStateEstimator</name>
	<version>1.0.0</version>
	<description>
    		This package is droneStateEstimator.
	</description>
	<author email="jl.sanchez@upm.es">Jose Luis Sanchez-Lopez</author>
	<maintainer email="jl.sanchez@upm.es">Jose Luis Sanchez-Lopez</maintainer>
  	<license>BSD</license>
	<url>http://ros.org/wiki/droneStateEstimator</url>

  	<buildtool_depend>catkin</buildtool_depend>


	<build_depend>message_generation</build_depend>
  	<build_depend>roscpp</build_depend>
  	<build_depend>std_msgs</build_depend>
  	<build_depend>droneMsgs</build_depend>
  	<build_depend>referenceFrames</build_depend>
  	<build_depend>droneModule</build_depend>
  	<build_depend>pugixml</build_depend>

	<run_depend>message_runtime</run_depend>
	<run_depend>roscpp</run_depend>
  	<run_depend>std_msgs</run_depend>
  	<run_depend>droneMsgs</run_depend>
  	<run_depend>referenceFrames</run_depend>
  	<run_depend>droneModule</run_depend>
  	<run_depend>pugixml</run_depend>


</package>


