<package>
	<name>parrotBrainInterface</name>
	<version>1.0.0</version>
	<description>
    		This package is parrotBrainInterface.
	</description>
	<author email="jespestana@gmail.com">Jesus Pestana Puerta</author>
	<maintainer email="jespestana@gmail.com">Jesus Pestana Puerta</maintainer>
  	<license>BSD</license>
	<url>http://ros.org/wiki/parrotBrainInterface</url>

  	<buildtool_depend>catkin</buildtool_depend>


  	<build_depend>parrotDriver</build_depend>
  	<build_depend>droneBrain</build_depend>
  	<build_depend>droneLogger</build_depend>

	<run_depend>parrotDriver</run_depend>
  	<run_depend>droneBrain</run_depend>
  	<run_depend>droneLogger</run_depend>


</package>


