<package>
	<name>parrotDriver</name>
	<version>1.0.0</version>
	<description>
    		This package is parrotDriver.
	</description>
	<author email="jl.sanchez@upm.es">Jose Luis Sanchez-Lopez</author>
	<maintainer email="jl.sanchez@upm.es">Jose Luis Sanchez-Lopez</maintainer>
  	<license>BSD</license>
	<url>http://ros.org/wiki/parrotDriver</url>

  	<buildtool_depend>catkin</buildtool_depend>


	<build_depend>ardrone_autonomy</build_depend>
  	<build_depend>roscpp</build_depend>
  	<build_depend>std_msgs</build_depend>
  	<build_depend>sensor_msgs</build_depend>
  	<build_depend>cv_bridge</build_depend>
  	<build_depend>image_transport</build_depend>
  	<build_depend>droneMsgs</build_depend>

	<run_depend>ardrone_autonomy</run_depend>
	<run_depend>roscpp</run_depend>
  	<run_depend>std_msgs</run_depend>
  	<run_depend>sensor_msgs</run_depend>
  	<run_depend>cv_bridge</run_depend>
  	<run_depend>image_transport</run_depend>
  	<run_depend>droneMsgs</run_depend>



</package>


